# argbigga

./: README.md  TODO.md  logging.ini  pyproject.toml  setup.cfg  setup.py
debian/: changelog  control  rules
src/argbigga/: __init__.py  modules.py  modutil.py  mullvad.py  systemd_networkd.py  wireguard.py  wireguard_tools.py
src/argbigga/cli/: argparse.py  common.py  logging.py  main.py
src/argbigga/cli/output/: __init__.py  json.py  text.py  yaml.py
src/argbigga/cli/subcommands/: __init__.py  check.py  help.py
src/argbigga/cli/subcommands/wg/: __init__.py  check.py  fillconf.py  genconf.py  getconf.py  prepare.py
src/argbigga/cli/subcommands/wg/key/: __init__.py  add.py  delete.py  genadd.py  list.py
src/argbigga/mullvad/: __init__.py  wireguard.py
src/argbigga/requests/: hooks.py
