[metadata]
author =
	David Joaquín Shourabi Porcel
author_email =
	david@djsp.eu
description = command-line tool to help automate Mullvad VPN setups on Linux
keywords =
	Mullvad
	WireGuard
long_description = file: README.md
maintainer = David Joaquín Shourabi Porcel
maintainer_email = david@djsp.eu
name = argbigga
url = https://github.com/wgnetns/argbigga
version = 1.0.0

[options]
install_requires =
	requests >= 2.22.0
packages = find:
python_requires = >= 3.8.0

[options.entry_points]
console_scripts =
	argbigga = argbigga.cli.main:entry_point

[options.extras_require]
wg_keygen_cryptography =
	cryptography >= 2.8
wg_keygen_nacl =
	PyNaCl >= 1.3.0

[options.packages.find]
where = src
