[metadata]
author = David Joaquín Shourabi Porcel
author_email = david@djsp.eu
description = command-line tool to help automate Mullvad VPN setups on Linux
keywords =
	Mullvad
	WireGuard
long_description = file: README.md
maintainer =
	David Joaquín Shourabi Porcel
maintainer_email = argbigga@djsp.eu
name = argbigga
url = https://github.com/kalrish/argbigga
version = 1.0.0

[options]
install_requires =
	requests >= 2.22.0
package_dir =
	=src
packages = find:
python_requires = >= 3.8.0

[options.entry_points]
console_scripts =
	argbigga = argbigga.cli.main:entry_point

[options.extras_require]
journald =
	systemd-python >= 234
#wg_keygen_cryptography =
#	cryptography >= 2.8
#wg_keygen_nacl =
#	PyNaCl >= 1.3.0
yaml =
	PyYAML >= 6.0

[options.packages.find]
where = src
